--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     border-radius: 50px;
     color: blue;
     background-color: rgb(214, 125, 125);
-    width: 500px;
+    width: 80%;
     height: 40px;
     font-size: 25px;
 }
